# fast_toml

./: .rubocop.yml  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  fast_toml.gemspec
.github/workflows/: ci.yml  main.yml  release.yml
ext/fast_toml/: Cargo.toml  extconf.rb
ext/fast_toml/src/: lib.rs
lib/: fast_toml.rb
lib/fast_toml/: version.rb
rakelib/: benchmark.rake  env.rake
test/: test_fast_toml.rb  test_helper.rb
